<resources>

    <string name="app_name">Workout App</string>

    <string name="splash_title_app">WorkoutApp</string>
    <string name="splash_title">Facturonas</string>
    <string name="splash_subtitle">28AV</string>
    <string name="login">Workout App Login</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="name">Nombre completo</string>
    <string name="update_profile">Guardar</string>
    <string name="register">Workout App Registro</string>
    <string name="link_signin">Iniciar sesión</string>
    <string name="text_signin">¿Ya tienes cuenta?</string>
    <string name="text_signup">¿No tienes cuenta?</string>
    <string name="link_signup">Registrarse</string>
    <string name="user_name">User Default</string>
    <string name="title1">Bienvenido a WorkoutApp</string>
    <string name="title2">Registro de ejercicio</string>
    <string name="title3">Calculadora IMC</string>
    <string name="title4">Ejercicios</string>
    <string name="description1">Una herramienta para que puedas hacer ejercicio en cualquier lugar y momento</string>
    <string name="description2">Contamos con un registro de los dias que haces ejercicio</string>
    <string name="description3">Tendras a la mano una calculadora de tu Indice de Masa Corporal</string>
    <string name="description4">Te explicamos como realizar los ejercicios</string>

</resources>
